# multimodal-device

./: CMakeLists.txt  README.md  audio_receiver.py  calibration_data.cpp  cylinder_warping.cpp  environment.yml  multicamera.cpp  multicamera_multithread.cpp  mutiCamOpenCV.cpp  mutiCamOpenCV_new.cpp  requirements.txt
examples/: audio_devices.py  audio_example.py  multicamera.cpp  multicameraUSB.cpp
include/: AudioStream.hpp  AudioStreamer.hpp  CameraStreamer.hpp
mmdata/: image_receiver.cpp  image_receiver.py  readme.md
mmdata/audio_tools/: __init__.py  audio_vis.py  audio_zmq.py
mmdata/image_tools/: __init__.py  image_zmq.py
process/face_tracker/: face_tracker.py
process/tracker/: kalman_filter.py
receiver/: CMakeLists.txt  audio_receiver.py  image_receiver.py
receiver/audio_tools/: audio_play.py  audio_vis.py  audio_zmq.py
receiver/image_tools/: __init__.py  image_vis.py  image_zmq.py
src/: AudioStream.cpp  AudioStreamer.cpp  CameraStreamer.cpp
